--- a/src/app/components/Project/contribute/contribute.component.css
+++ b/src/app/components/Project/contribute/contribute.component.css
@@ -1,255 +1,253 @@
-/*
-*
-* ===========================================================
-*     HERO SECTION
-* ===========================================================
-*
-*/
-.hero {
-    padding: 6.25rem 0px !important;
-    margin: 0px !important;
-  }
-  .cardbox {
-    border-radius: 3px;
-    margin-bottom: 20px;
-    padding: 0px !important;
-  }
-  
-  /* ------------------------------- */
-  /* Cardbox Heading
-  ---------------------------------- */
-  .cardbox .cardbox-heading {
-    padding: 16px;
-    margin: 0;
-  }
-  .cardbox .btn-flat.btn-flat-icon {
-   border-radius: 50%;
-   font-size: 24px;
-   height: 32px;
-   width: 32px;
-   padding: 0;
-   overflow: hidden;
-   color: #fff !important;
-   background: #b5b6b6;
-   
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  }
-  .cardbox .float-right .dropdown-menu{
-    position: relative;
-    left: 13px !important;  
-  }
-  .cardbox .float-right a:hover{
-    background: #f4f4f4 !important;	
-  }
-  .cardbox .float-right a.dropdown-item {
-    display: block;
-    width: 100%;
-    padding: 4px 0px 4px 10px;
-    clear: both;
-    font-weight: 400;
-    font-family: 'Abhaya Libre', serif;
-    font-size: 14px !important;
-    color: #848484;
-    text-align: inherit;
-    white-space: nowrap;
-    background: 0 0;
-    border: 0;
-  }
-  
-  /* ------------------------------- */
-  /* Media Section
-  ---------------------------------- */
-  .media {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: start;
-    align-items: flex-start;
-  }
-  .d-flex {
-    display: -ms-flexbox !important;
-    display: flex !important;
-  }
-  .media .mr-3{
-    margin-right: 1rem !important;
-  }
-  .media img{
-    width: 48px !important;
-    height: 48px !important;
-    padding: 2px;
-    border: 2px solid #f4f4f4;
-  } 
-  .media-body {
-    -ms-flex: 1;
-    flex: 1;
-    padding: .4rem !important;
-  }
-  .media-body p{
-    font-family: 'Rokkitt', serif;	
-    font-weight: 500 !important;
-    font-size: 14px;
-    color: #88898a;
-  }
-  .media-body small span{
-    font-family: 'Rokkitt', serif;	
-    font-size: 12px;
-    color: #aaa;
-    margin-right: 10px;
-  }
-  
-  
-  /* ------------------------------- */
-  /* Cardbox Item
-  ---------------------------------- */
-  .cardbox .cardbox-item {
-      position: relative;
-      display: block;
-  }
-  .cardbox .cardbox-item img{
-  }
-  .img-responsive{
-      display: block;
-      max-width: 100%;
-      height: auto;
-  }	
-  .fw {
-      width: 100% !important;
-      height: auto;
-  }
-  
-  
-  /* ------------------------------- */
-  /* Cardbox Base
-  ---------------------------------- */
-  .cardbox-base{
-   border-bottom: 2px solid #f4f4f4;
-  }	
-  .cardbox-base ul{
-   margin: 10px 0px 10px 15px!important; 
-   padding: 10px !important;
-   font-size: 0px;	
-    display: inline-block;
-  }
-  .cardbox-base li {
-    list-style: none;
-    margin: 0px 0px 0px -8px !important;
-    padding: 0px 0px 0px 0px !important;
-    display: inline-block;
-  }
-  
-  .cardbox-base li a{
-    margin: 0px !important;
-    padding: 0px !important;
-  }
-  .cardbox-base li a i{
-   position: relative;
-   top: 4px; 
-   font-size: 16px;
-   color: #8d8d8d;
-   margin-right: 15px;
-  }
-  .cardbox-base li a span{
-   font-family: 'Rokkitt', serif;
-   font-size: 14px;
-   color: #8d8d8d;
-   margin-left: 20px;
-   position: relative;
-   top: 5px; 
-  }
-  .cardbox-base li a em{
-   font-family: 'Rokkitt', serif;
-   font-size: 14px;
-   color: #8d8d8d;
-   position: relative;
-   top: 3px; 
-  }
-  .cardbox-base li a img{
-    width: 25px;
-    height: 25px;
-    margin: 0px !important;
-    border: 2px solid #fff;
-  }
-  
-  
-  /* ------------------------------- */
-  /* Cardbox Comments
-  ---------------------------------- */
-  .cardbox-comments{
-    padding: 10px 40px 20px 40px !important;
-    font-size: 0px;	
-    text-align: center;
-    display: inline-block;
-  }
-  .cardbox-comments .comment-avatar img{
-    margin-top: 1px;
-    margin-right: 10px;
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    width: 40px;
-    height: 40px;
-  }
-  .cardbox-comments .comment-body {
-    overflow: auto;
-  }
-  .search {
-   position: relative;
-   right: -60px;
-   top: -40px;
-   margin-bottom: -40px;
-   border: 2px solid #f4f4f4;	
-   width: 100%;
-   overflow: hidden;
-  }
-  .search input[type="text"] {
-   background-color: #fff;
-   line-height: 10px;
-   padding: 15px 60px 20px 10px;
-   border: none;
-   border-radius: 4px;
-   width: 350px;
-   font-family: 'Rokkitt', serif;
-   font-size: 14px;
-   color: #8d8d8d;
-   height: inherit;
-   font-weight: 700;
-  }
-  .search button {
-   position: absolute;
-   right: 0;
-   top: 0px;
-   border: none;
-   background-color: transparent;
-   color: #bbbbbb;
-   padding: 15px 25px;
-   cursor: pointer;
-   
-   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  }
-  .search button i {
-   font-size: 20px;
-   line-height: 30px;
-   display: block;
-  }
+
   
   
   /* ------------------------------- */
   /* Author
   ---------------------------------- */
   .author a{
-   font-family: 'Rokkitt', serif;
-   font-size: 16px;
-   color: #00C4CF;
-  }
-  .author p{
-   font-family: 'Rokkitt', serif;
-   font-size: 16px;
-   color: #8d8d8d;
-  }
+    font-family: 'Rokkitt', serif;
+    font-size: 16px;
+    color: #00C4CF;
+   }
+   .author p{
+    font-family: 'Rokkitt', serif;
+    font-size: 16px;
+    color: #8d8d8d;
+   }
+ 
+ 
+ 
+   .card-inner{
+     margin-left: 4rem;
+ }  
+ 
+ 
+ /* Split the screen in half */
+ .split {
+   height: 100%;
+   width: 50%;
+   position: fixed;
+   z-index: 1;
+   top: 0;
+   overflow-x: hidden;
+   padding-top: 20px;
+ }
+ 
+ 
+
+
+/*******LEFT SIDE CSS (project)******/
+
+.card-img-top
+{
+    width: 80%;
+    position: relative;
+    overflow: hidden;
+    margin-left: 17px;
+    margin-top: -20px;
+    border-radius: 6px;
+    box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+}
+.a{
+box-sizing: border-box;
+vertical-align: middle;
+border-style: none;
+box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+width: 36px;
+height: 36px;
+overflow: hidden;
+border-radius: 50%;
+margin-right: 5px;
+}
+a {
+    color: #0060B6;
+    text-decoration: none;
+}
+
+a:hover 
+{
+    color:#00A0C6; 
+    text-decoration:none; 
+    cursor:pointer;  
+}
+#container
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.card-title{
+    font-family: 'Roboto Slab', serif;
+}
+.card-description{
+    font-family: 'Roboto Condensed', sans-serif;
+}
+.text-card{
+    color: white;
+}
+.btn{
+    border-radius: 20px;
+}
+.card
+{
+    margin-top: 20px;
+    border-radius: 10px;
+}
+#accordion .glyphicon 
+{ margin-right:10px; }
+    
+    
+
+.clickable{
+    cursor: pointer;   
+}
+
+.panel-heading span {
+    margin-top: -20px;
+    font-size: 15px;
+}
+.simple {
+    background: white;
+    color:black;
+}
+
+.simple-content {
+    color : black;
+}
+
+.colored-content {
+    color : white;
+}
+
+.peinterest {
+    background: #e60023;
+}
+
+.facebook {
+    background-color: #4e71ba;
+}
+
+.twitter {
+    background-color: #17a2b8;
+}
+
+.pt-txt {
+    color: #e60023;
+}
+
+.fb-txt {
+    color: #4e71ba;
+}
+
+.twt-txt {
+    color: #17a2b8;
+}
+
+.in-txt {
+    color: #E1306C;
+}
+
+.copy-conteiner {
+    height:40vh;
+    background:#FFFFFF11;
+    border:0.5px solid #FFFFFF33;
+}
+.desc-conteiner {
+    font-size:95%;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 7.5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #FFFFFF44; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #FFFFFF33; 
+}
+.inactive {
+    background-color:#FFFFF499;
+    color:#bd2130;
+    border:0.5px solid #bd2130;
+    font-size:105%;
+}
+.active {
+    background-color:#bd2130;
+    color:#FFFFF499;
+    border:0.5px solid #FFFFF499;
+    font-size:105%;
+}
+
+.date{
+    font-size:74%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/**********SPLIT SCREEEEN***************/ 
+
+/* Control the left side */
+.left {
+  left: 0;
+}
+
+/* Control the right side */
+.right {
+  right: 0;
+}
+
+/* If you want the content centered horizontally and vertically */
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+/* Style the image inside the centered container, if needed */
+.centered img {
+  width: 150px;
+  border-radius: 50%;
+}
