--- a/src/app/components/Project/contribute/contribute.component.html
+++ b/src/app/components/Project/contribute/contribute.component.html
@@ -1,81 +1,201 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+<div class="split left">
+    <div class="col-sm-9 col-md-9 col-lg-9 p-0">
+        <div class="panel panel-default">
+            <div class="panel-body p-2">
+                <div *ngIf="data">
+                      
+                </div>
+                
+                <div *ngIf="data" class="d-flex justify-content-around flex-wrap">
 
 
-		<link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet"> 
-		<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	
-	    <!-- ==============================================
-	    Hero
-	    =============================================== -->
-        <section class="hero">
-         <div class="container">
-          <div class="row">	
-		  
-		   <div class="col-lg-6 offset-lg-3">
-			
-			<div class="cardbox shadow-lg bg-white">
-			 
-			 <div class="cardbox-heading">
-			  <!-- START dropdown-->
-			  <div class="dropdown float-right">
-			   <button class="btn btn-flat btn-flat-icon" type="button" data-toggle="dropdown" aria-expanded="false">
-				<em class="fa fa-ellipsis-h"></em>
-			   </button>
-			   <div class="dropdown-menu dropdown-scale dropdown-menu-right" role="menu" style="position: absolute; transform: translate3d(-136px, 28px, 0px); top: 0px; left: 0px; will-change: transform;">
-				<a class="dropdown-item" href="#">Hide post</a>
-				<a class="dropdown-item" href="#">Stop following</a>
-				<a class="dropdown-item" href="#">Report</a>
-			   </div>
-			  </div><!--/ dropdown -->
-			  <div class="media m-0">
-			   <div class="d-flex mr-3">
-				<a href=""><img class="img-fluid rounded-circle" src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/4.jpg" alt="User"></a>
-			   </div>
-			   <div class="media-body">
-			    <p class="m-0">Benjamin Robinson</p>
-				<small><span><i class="icon ion-md-pin"></i> Nairobi, Kenya</span></small>
-				<small><span><i class="icon ion-md-time"></i> 10 hours ago</span></small>
-			   </div>
-			  </div><!--/ media -->
-			 </div><!--/ cardbox-heading -->
-			  
-			 <div class="cardbox-item">
-			  <img class="img-fluid" src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/1.jpg" alt="Image">
-			 </div><!--/ cardbox-item -->
-			 <div class="cardbox-base">
-			  <ul class="float-right">
-			   <li><a><i class="fa fa-comments"></i></a></li>
-			   <li><a><em class="mr-5">12</em></a></li>
-			   <li><a><i class="fa fa-share-alt"></i></a></li>
-			   <li><a><em class="mr-3">03</em></a></li>
-			  </ul>
-			  <ul>
-			   <li><a><i class="fa fa-thumbs-up"></i></a></li>
-			   <li><a href="#"><img src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/3.jpeg" class="img-fluid rounded-circle" alt="User"></a></li>
-			   <li><a href="#"><img src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/1.jpg" class="img-fluid rounded-circle" alt="User"></a></li>
-			   <li><a href="#"><img src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/5.jpg" class="img-fluid rounded-circle" alt="User"></a></li>
-			   <li><a href="#"><img src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/2.jpg" class="img-fluid rounded-circle" alt="User"></a></li>
-			   <li><a><span>242 Likes</span></a></li>
-			  </ul>			   
-			 </div><!--/ cardbox-base -->
-			 <div class="cardbox-comments">
-			  <span class="comment-avatar float-left">
-			   <a href=""><img class="rounded-circle" src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/6.jpg" alt="..."></a>                            
-			  </span>
-			  <div class="search">
-			   <input placeholder="Write a comment" type="text">
-			   <button><i class="fa fa-camera"></i></button>
-			  </div><!--/. Search -->
-			 </div><!--/ cardbox-like -->			  
-					
-			</div><!--/ cardbox -->
+                    <div >
+                        
+                        <!--Media-->
+                        <div *ngIf="data.media" class="card mt-4 simple" style="width: 18rem;height:550px;">
+                            
+                            <img [src]="data.media.path" height="320px" width="5%" class="card-img-top" alt="...">
 
-           </div><!--/ col-lg-6 -->	
-		 
-			
-          </div><!--/ row -->
-         </div><!--/ container -->
-        </section>
+                            <div class="card-body ">
+                                <div class="table">
+                                    <div class="row mb-1">
+                                        <h6 *ngIf="isJustInstagramProj(data)" class="in-txt">
+                                            <i class="fa fa-instagram"></i> Instagram
+                                        </h6>
+                                        <h6 *ngIf="isJustFacebookProj(data)" class="fb-txt">
+                                            <i class="fa fa-facebook-f"></i> Facebook
+                                        </h6>
+                                        <h6 *ngIf="isJustPinterestProj(data)" class="pt-txt">
+                                            <i class="fa fa-pinterest"></i> Pinterest
+                                        </h6>
+                                        <h6 *ngIf="isJustTikTokProj(data)">
+                                            <i class="fa fa-music"></i> TikTok
+                                        </h6>
+                                        <h6 *ngIf="isJustPinterestProj(data)" class="pt-txt">
+                                            <i class="fa fa-pinterest"></i> Pinterest
+                                        </h6>
+                                        <h6 *ngIf="isJustTwitterProj(data)" class="twt-txt">
+                                            <i class="fa fa-twitter"></i> Twitter
+                                        </h6>
+                                        <h5 *ngIf="isMultiPlatformesProj(data)" class="category-social col-10">
+                                            <div *ngFor="let plat of proj.targetedCriterias.targetedPlatforms">
+                                                <i *ngIf="plat == 'Facebook'"
+                                                    class="fa fa-facebook-f font-weight-bold float-left fb-txt ml-2"></i>
+                                                <i *ngIf="plat == 'Instagram'"
+                                                    class="fa fa-instagram font-weight-bold float-left in-txt ml-2"></i>
+                                                <i *ngIf="plat == 'Pinterest'"
+                                                    class="fa fa-pinterest font-weight-bold float-left pt-txt ml-2"></i>
+                                                <i *ngIf="plat == 'TikTok'"
+                                                    class="fa fa-music font-weight-bold float-left ml-2"></i>
+                                                <i *ngIf="plat == 'Twitter'"
+                                                    class="fa fa-twitter font-weight-bold float-left twt-txt ml-2"></i>
+                                            </div>
+                                        </h5>
+                                    </div>
+
+                                    <h4 class="card-title">
+                                        <a href="#">{{data.title }}</a>
+                                    </h4>
+                                    <p class="card-description"> {{data.description }}</p>
+                                    <div class="ftr">
+                                        <div class="author">
+                                            <a href="#"> <img [src]="data.user.profile.profilePhoto"
+                                                    alt="esm moula lprojet" class="a" />
+                                                <span>{{ data.user.username }}</span></a>
+                                        </div>
+                                        <div class="time date" style="float: right;">
+                                            <i class="fa fa-clock-o"></i> {{ data.createdAt | date }}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!--Copy-->
+                        <div *ngIf="data"
+                            class="card text-card mt-4 {{ isJustPinterestProj(data) ? 'peinterest' : ''}} {{ isJustFacebookProj(data) ? 'facebook' : ''}} {{ isJustTwitterProj(data) ? 'twitter' : ''}} {{ isJustInstagramProj(data)||isJustTikTokProj(data)||isMultiPlatformesProj(data)||isNotDefPlatformesProj(data) ? 'simple' : ''}}"
+                            style="width: 18rem;height:550px;">
+                            <div class="row">
+                                <h5 *ngIf="isJustPinterestProj(data)" class="category-social col-8 mb-0"
+                                    style="margin-top:2%;">
+                                    <i class="fa fa-pinterest ml-3"></i> &nbsp;Pinterest
+                                </h5>
+                                <h5 *ngIf="isJustFacebookProj(data)" class="category-social col-8 mb-0"
+                                    style="margin-top:2%;">
+                                    <i class="fa fa-facebook-f ml-3"></i> &nbsp;Facebook
+                                </h5>
+                                <h5 *ngIf="isJustInstagramProj(data)" class="category-social col-8 mb-0"
+                                    style="margin-top:2%; color: #E1306C;">
+                                    <i class="fa fa-instagram font-weight-bold ml-3"></i> &nbsp;Instagram
+                                </h5>
+                                <h5 *ngIf="isJustTikTokProj(data)" class="category-social col-8 mb-0"
+                                    style="margin-top:2%;">
+                                    <i class="fa fa-music font-weight-bold ml-3" aria-hidden="true"></i> &nbsp;TikTok
+                                </h5>
+                                <h5 *ngIf="isJustTwitterProj(data)" class="category-social col-8 mb-0"
+                                    style="margin-top:2%;">
+                                    <i class="fa fa-twitter font-weight-bold ml-3" aria-hidden="true"></i> &nbsp;Twitter
+                                </h5>
+                                <div class="time col-4 date {{ isMultiPlatformesProj(data)||isNotDefPlatformesProj(data) ? 'ml-3' : ''}}"
+                                    style="float:right;">
+                                    <i class="fa fa-clock-o"></i> {{data.createdAt | date }}
+                                </div>
+                                <h5 *ngIf="isMultiPlatformesProj(data)" class="category-social mb-0 mt-2 col-7">
+                                    <div class="float-right mr-2"
+                                        *ngFor="let plat of proj.targetedCriterias.targetedPlatforms">
+                                        <i *ngIf="plat == 'Facebook'"
+                                            class="fa fa-facebook-f font-weight-bold float-left fb-txt"></i>
+                                        <i *ngIf="plat == 'Instagram'"
+                                            class="fa fa-instagram font-weight-bold float-left in-txt"></i>
+                                        <i *ngIf="plat == 'Pinterest'"
+                                            class="fa fa-pinterest font-weight-bold float-left pt-txt"></i>
+                                        <i *ngIf="plat == 'TikTok'" class="fa fa-music font-weight-bold float-left"></i>
+                                        <i *ngIf="plat == 'Twitter'"
+                                            class="fa fa-twitter font-weight-bold float-left twt-txt"></i>
+                                    </div>
+                                </h5>
+                            </div>
+
+
+                            <div class="card-body mt-0">
+                                <div class="copy-conteiner mb-1 p-2 overflow-auto">
+                                    {{ data.copy.text }}
+                                </div>
+                                <h5 class="card-title" style="font-size:135%;">{{ data.title }}</h5>
+                                <p class="card-description desc-conteiner">{{ data.description }}</p>
+                                <div class="ftr float-left">
+                                    <div class="author">
+                                        <a href="#"
+                                            class="{{ isMultiPlatformesProj(data)||isJustTikTokProj(data)||isJustInstagramProj(data)||isNotDefPlatformesProj(data) ? 'simple-content' : 'colored-content' }}">
+                                            <img [src]="data.user.profile.profilePhoto" alt="esm moula lprojet"
+                                                class="a" /> <span>{{ data.user.username }}</span></a>
+                                    </div>
+
+                                </div>
+                                <div class="ftr text-center"> <button type="button"
+                                        class="btn btn-info btn-light btn-round font-weight-bold {{ isJustInstagramProj(data) ? 'in-txt' : ''}} {{ isJustPinterestProj(data) ? 'pt-txt' : ''}} {{ isJustFacebookProj(data) ? 'fb-txt' : ''}} {{ isJustTwitterProj(data) ? 'twt-txt' : ''}}">Contribute</button>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+
+
+<!--   COMMENTS      -->
+
+<div class="split right">
+    <div class="container">
+
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-2">
+                        <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid" />
+                        <p class="text-secondary text-center">15 Minutes Ago</p>
+                    </div>
+                    <div class="col-md-10">
+                        <p>
+                            <a class="float-left"
+                                href="https://maniruzzaman-akash.blogspot.com/p/contact.html"><strong>Maniruzzaman
+                                    Akash</strong></a>
+                            <span class="float-right"><i class="text-warning fa fa-star"></i></span>
+                            <span class="float-right"><i class="text-warning fa fa-star"></i></span>
+                            <span class="float-right"><i class="text-warning fa fa-star"></i></span>
+                            <span class="float-right"><i class="text-warning fa fa-star"></i></span>
+
+                        </p>
+                        <div class="clearfix"></div>
+                        <p>Lorem Ipsum is simply dummy text of the pr make but also the leap into electronic
+                            typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                            release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                            publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <p>
+                            <a class="float-right btn btn-outline-primary ml-2"> <i class="fa fa-reply"></i> Reply</a>
+                            <a class="float-right btn text-white btn-danger"> <i class="fa fa-heart"></i> Like</a>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
